--- a/style/style.scss
+++ b/style/style.scss
@@ -278,7 +278,82 @@ input::placeholder{
     margin-bottom: 0;
   }
 }
+.col-lg-3{
+  background: silver;
+}
 
 .tour-list{
   display: flex;
+  flex-wrap: wrap;
+  margin-right: calc(var(--bs-gutter-x)/ -2);
+  margin-left: calc(var(--bs-gutter-x)/ -2);
+
+  .card-wrapper{
+    flex: 0 0 auto;
+    width: calc((100% / 3) - 30px);
+    margin-bottom: 30px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .tour-card{
+    border-radius: 2px;
+    overflow: hidden;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    // margin-bottom: 30px;
+    .img_wrapper{
+      height: 100px;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img{
+        max-width: 100%;
+        transition: 1s;
+      }
+    }
+    .card-description{
+      padding: 15px;
+      padding-bottom: 22px;
+      p{
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 100%;
+        color: $gray2;
+        margin-bottom: 5px;
+      }
+      span{
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 100%;
+        color: $gray2;
+      }
+      .card-description__down{
+        margin-top: 22px;
+        p{
+          color: $red;
+        }
+      }
+    }
+  }
+  .tour-card:hover{
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.15);
+    img{
+      transform: scale(1.2, 1.2);
+    }
+  }
+}
+// Rezult search
+.rezult-select{
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  margin-bottom: 30px;
+  border: solid 1px $gray5;
+  p{
+    margin-right: 15px;
+  }
+  p:last-child{
+    margin-right: 0;
+  }
 }
