--- a/style/style.scss
+++ b/style/style.scss
@@ -14,6 +14,12 @@ a {
   text-decoration: none;
 }
 
+button{
+  border: none;
+  padding: 0;
+  background: none;
+}
+
 
 input{
   border: none;
@@ -22,10 +28,114 @@ input::placeholder{
   font-family: "Source Sans Pro", sans-serif;
 }
 
+//----------------------- Header-Nav
+.header-nav{
+  display: flex;
+  flex: 1;
+  padding-left: 30px;
+  align-items: center;
+  // background: silver;
+  .nav_hamburger{
+    width: 26px;
+    height: 23px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+
+    
+    span{
+      width: 100%;
+      height: 2px;
+      display: block;
+      background: red;
+      border-radius: 2px;
+      transition: .2s;  
+      position: absolute;
+      left: 0;
+    }
+    span:nth-child(1){
+      top: 0;
+    }
+    span:nth-child(2), span:nth-child(3){
+      top: 11px;
+    }
+    span:nth-child(4){
+      bottom: 0;
+    }
+  }
+  .nav_hamburger:hover{
+    span{
+      transition: .2s;
+      opacity: .5;
+    }
+    span:nth-child(2), span:nth-child(3){
+      opacity: .25;
+    }
+
+  }
+
+  .link_wrapper{
+    transition: .2s;
+    overflow: hidden;
+    width: 100%;
+    display: inline-block;
+    a{
+      white-space:nowrap;
+      padding: 0 10px;
+      font-weight: 600;
+
+    }
+  }
+  .hidden{
+    .link_wrapper{
+      width: 0;
+      overflow: hidden;
+      transition: .2s;
+    }
+
+  }
+
+}
+.header-nav.active{
+
+  .nav_hamburger{
+    margin-left: 10px;
+    span{
+      transition: .2s;
+    }
+    span:nth-child(2){
+      transform: rotate(-45deg)
+      
+    }
+    span:nth-child(3){
+      transform: rotate(45deg)
+    }
+    span:nth-child(1), span:nth-child(4){
+      opacity: 0;
+    }
+  }
+}
+.header-nav.active:hover{
+  .nav_hamburger{
+    span{
+      opacity: .5;
+  }
+    span:nth-child(1), span:nth-child(4){
+      opacity: 0;
+    }
+  }
+
+}
+
+
+
+
 .wiget_findTour {
   display: flex;
   height: 160px;
-  background: silver;
+  filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.1));
+  background: $white;
   .wrapper{
     display: flex;
     flex-direction: column;
