--- a/style/style.scss
+++ b/style/style.scss
@@ -1,6 +1,7 @@
 // @import '../components/header/header.scss';
 
 $white: #ffffff;
+$black: #222222;
 $red: #E42B27;
 $gray2:#4F4F4F;
 $gray4:#BDBDBD;
@@ -27,6 +28,96 @@ input{
 input::placeholder{
   font-family: "Source Sans Pro", sans-serif;
 }
+// ----------------------------Header
+// header{
+//   position: relative;
+//   .header.index{
+//     background: white;
+//   }
+// }
+
+.headerAccount {
+  display: flex;
+  align-items: center;
+  a {
+    font-size: 14px;
+    color: #e42b27;
+  }
+  a:hover {
+    border-bottom: solid 1px;
+  }
+  img {
+    padding-left: 10px;
+  }
+}
+.headerIndex, .header{
+  position: relative;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.headerNav{
+  flex: 2;
+  margin-right: 40px;
+  margin-left: 40px;
+  display: flex;
+  justify-content: space-between;
+  a {
+    font-size: 16px;
+    font-weight: 600;
+  }
+  a:hover{
+      border-bottom: solid 1px;
+      opacity: .7;
+  }
+}
+.brandName {
+  background: #ffffff;
+  width: 130px;
+  height: 130px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: solid 1px;
+  h1{
+    font-size: 30px;
+    font-weight: 500;
+    color: #e42b27;
+  }
+  h1:first-child{
+    color: #4F4F4F;
+  }
+}
+.userPanel{
+    width: 380px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 30px;
+}
+.actions {
+  font-weight: 600;
+  font-size: 20px;
+  color: #e42b27;
+  position: relative;
+  padding-left: 12px;
+}
+.actions::before{
+    position: absolute;
+    content: '';
+    background: url('/img/header_action_array.svg') no-repeat center;
+    width: 7px;
+    height: 13px;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.actions:hover{
+    border-bottom: solid 1px;
+}
+
 
 //----------------------- Header-Nav
 .header-nav{
@@ -128,14 +219,66 @@ input::placeholder{
 
 }
 
+// ------------------------------------- IndexSlider
 
+.indexSlider{
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, #FFFFFF 52.16%, #ECECEC 100%);
+}
+.index-slider{
+  width: 63%;
+  height: 500px;
+  position: relative;
+  overflow: hidden;
+  .slick-slide{
+    position: relative;
+    .slideItem_textContent{
+      position: absolute;
+      top: 200px;
+    }
+  }
+  .nav-slider{
+    position: absolute;
+    left: 30px;
+    z-index: 2;
+    cursor: pointer;
+    text-align: center;
+    svg{
+      width: 40px;
+      height: 36px;
+      stroke:$white;
+      stroke-width: 2px;
+      stroke-linecap: round;
+      fill: none;
+    }
+  }
+  .nav-slider:hover{
+    opacity: .7;
+  }
 
+  .PrevArrow{
+    top:80px;
 
+  }
+  .NextArrow{
+    bottom: 80px;
+  }
+}
+
+// ------------------------------ Find Tours ------------------
 .wiget_findTour {
+  position: relative;
+  top: 287px;
+  z-index: 5;
   display: flex;
   height: 160px;
   filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.1));
-  background: $white;
+  background: rgba(255, 255, 255, 0.9);
+  width: 100%;
   .wrapper{
     display: flex;
     flex-direction: column;
@@ -210,6 +353,7 @@ input::placeholder{
     input::placeholder{
       font-size: 16px;
       font-weight: 600;
+      color:$black
     }
     .input_icon {
       width: 32px;
