--- a/style/style.scss
+++ b/style/style.scss
@@ -3,6 +3,7 @@
 $white: #ffffff;
 $black: #222222;
 $red: #E42B27;
+$light_red: #FF413D;
 $gray2:#4F4F4F;
 $gray4:#BDBDBD;
 $gray5:#E0E0E0;
@@ -26,7 +27,12 @@ button{
 h2{
   font-size: 45px;
 }
-
+h6{
+  font-size: 20px;
+}
+span{
+  font-size: 14px;
+}
 
 input{
   border: none;
@@ -313,31 +319,38 @@ input::placeholder{
     z-index: 100;
     top: 200px;
     h2{
-      font-weight: 300;
+      font-weight: 600;
       color:$white;
     }
     .slideItem_description{
       margin-top: 30px;
-      padding: 15px;
-      border-left: 2px solid $white;
+      // padding: 15px;
       p{
         font-weight: 600;
         font-size: 20px;
         color: $white;
-        margin-bottom: 10px;
+        margin-bottom: 30px;
       }
       a{
+        // display: block;
+        background: $red;
+        padding: 12px 30px;
         color:$white;
-        font-weight: 400;
-        position: relative;
-        border-bottom: solid 1px $white;
-        display: inline-block;
-        padding-bottom: 5px;
-        opacity: 1;
+        border-radius: 3px;
+        font-size: 14px;
+        // font-weight: 400;
+        // position: relative;
+        // border-bottom: solid 1px $white;
+        // display: inline-block;
+        // padding-bottom: 5px;
+        // opacity: 1;
       }
       a:hover{
-        opacity: .7;
-        border-bottom: none;
+        background: $light_red;
+        transition: .3s;
+        box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2);
+        // opacity: .7;
+        // border-bottom: none;
       }
     }
   }
@@ -410,9 +423,66 @@ input::placeholder{
   top:208px;
   width: 380px;
   z-index: 20;
-  background:silver;
   display: flex;
   justify-content: space-between;
+  // --------------
+  .adressSocial{
+    li:first-child{
+      padding-top: 0;
+    }
+    li{
+      padding: 7px 0;
+    }
+  }
+  // ----------
+  .contact{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    .city-title{
+      color:$black;
+    }
+    .contact_phone{
+      h6{
+        font-weight: 600;
+        color: $red;
+        padding-top: 5px;
+      }
+    }
+    .city-name{
+      padding-top: 5px;
+      cursor: pointer;
+      span{
+        color: $red;
+        font-weight: 600;
+        font-size: 20px;
+        border-bottom: none;
+        
+      }
+      span:hover{
+        border-bottom: solid 1px $red;
+      }
+    }
+
+  }
+}
+
+.social-icon{
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 1px;
+}
+.social-icon.gray{
+  background: $gray5;
+  svg{
+    fill: $white;
+  }
+}
+.social-icon.gray:hover{
+  background: $gray4;
 }
 
 // ------------------------------ Find Tours ------------------
