--- a/style/style.scss
+++ b/style/style.scss
@@ -30,6 +30,9 @@ button{
 h2{
   font-size: 45px;
 }
+h5{
+  font-size: 25px;
+}
 h6{
   font-size: 20px;
 }
@@ -279,7 +282,7 @@ input::placeholder{
 .indexSliderPreloader{
   width: 100%;
   height: 500px;
-  background: $gray5;
+  background: #F5F5F5;
   position: relative;
   top: 0;
 }
@@ -287,7 +290,7 @@ input::placeholder{
   position: absolute;
   width: 40%;
   height: 100%;
-  background: linear-gradient(270deg, #CECECE 0%, #E0E0E0 93.18%);
+  background: linear-gradient(270deg, #F5F5F5 0%, #EEEEEE 100%);
   content: '';
   top: 0;
   left: 80%;
@@ -306,7 +309,7 @@ input::placeholder{
     left: 100%;
   }
 }
-// ---------------------- Slider
+// =============================================== Slider
 
 .indexSlider{
   width: 100%;
@@ -416,7 +419,7 @@ input::placeholder{
 .getUserCity{
   position: absolute;
   top:208px;
-  width: 380px;
+  width: 350px;
   z-index: 20;
   display: flex;
   justify-content: space-between;
@@ -480,7 +483,7 @@ input::placeholder{
   background: $gray4;
 }
 
-// ------------------------------ Find Tours ------------------
+// ================================================== Find Tours ====================================
 .wiget_findTour {
   position: relative;
   top: 287px;
@@ -490,6 +493,7 @@ input::placeholder{
   filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.1));
   background: rgba(255, 255, 255, 0.9);
   width: 100%;
+  margin-bottom: 287px;
   .wrapper{
     display: flex;
     flex-direction: column;
@@ -771,7 +775,7 @@ input::placeholder{
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     // margin-bottom: 30px;
     .img_wrapper{
-      height: 150px;
+      height: 120px;
       overflow: hidden;
       display: flex;
       align-items: center;
@@ -782,15 +786,21 @@ input::placeholder{
         transition: 1s;
       }
     }
-    .card-description{
+    .card-description{  // ------------------------------------------
       padding: 15px;
       padding-bottom: 13px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      flex-grow: 1;
+      height: 150px;
       h5{
         font-weight: 400;
         font-size: 18px;
         line-height: 100%;
         color: $gray2;
-        margin-bottom: 16px;      
+        // margin-bottom: 16px;      
       }
       span{
         font-weight: 300;
@@ -801,7 +811,7 @@ input::placeholder{
         margin: 5px 0;
       }
       .card-description__down{
-        margin-top: 22px;
+        // margin-top: 22px;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -834,7 +844,7 @@ input::placeholder{
     }
   }
 }
-// Rezult search --------------------------------
+// =============================================== Rezult search ========================================
 .rezult-select{
   border: solid 1px $gray6;
   padding: 15px;
@@ -880,7 +890,7 @@ input::placeholder{
   .hostCard{
     border-radius: 2px;
     .hostImg{
-      background: $gray6;
+      background: #F5F5F5;
       width: 100%;
       height: 150px;
       position: relative;
@@ -892,7 +902,7 @@ input::placeholder{
       top: 0;
       width: 50%;
       height: 100%;
-      background: linear-gradient(-270deg, #F2F2F2 0%, #E0E0E0 100%);
+      background: linear-gradient(-270deg, #F5F5F5 0%, #EEEEEE 100%);
       animation-name: host;
       animation-timing-function:linear;
       animation-iteration-count: infinite;
@@ -909,7 +919,7 @@ input::placeholder{
       flex: 1 1 100%;
       .hostText{
         height: 15px;
-        background: $gray6;
+        background: #F5F5F5;
         width: 100%;
         border-radius: 10px;
         position: relative;
@@ -921,7 +931,7 @@ input::placeholder{
         top: 0;
         width: 50%;
         height: 100%;
-        background: linear-gradient(-270deg, #F2F2F2 0%, #E0E0E0 100%);
+        background: linear-gradient(-270deg, #F5F5F5 0%, #EEEEEE 100%);
         animation-name: hostText;
         animation-timing-function:linear;
         animation-iteration-count: infinite;
@@ -946,5 +956,141 @@ input::placeholder{
       left: 168%;
     }
   }
+// ================================== SliderRow ===================================
+.section-title{
+  padding-top: 30px;
+  padding-bottom: 15px;
+  border-bottom: solid 1px $gray5;
+  color: $gray2;
+  position: relative;
+  padding-left: 45px;
+  
+}
 
+.section-title:before{
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    background: $red;
+    border-radius: 1px;
+  }
+.slideShowRow{
+  padding: 30px 0;
+  margin: 0 -15px;
+  .slick-list::before, .slick-list::after{
+    content: '';
+    width: 15px;
+    height: 100%;
+    background: $white;
+    position: absolute;
+    z-index: 10;
+    top: 0;
+  }
+  .slick-list::before{
+    left: 0;
+
+  }
+  .slick-list::after{
+    right: 0;
+    
+  }
+  .PrevArrow, .NextArrow{
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    background: $white;
+    top: 50%;
+    transform: translate(0,-50%);
+    border: solid 1px $gray5;
+    border-radius: 2px;
+    z-index: 11;
+    svg{
+      stroke: $gray4;
+      stroke-width: 3;
+      fill: none;
+      width: 10px;
+      height: 14px;
+      position: absolute;
+      top: 50%;
+      transform: translate(0, -50%);
+    }
+  }
+  .PrevArrow{
+    right: -40px;
+    svg{
+      right: 10px;
+      
+    }
+  }
+  .PrevArrow:hover, .NextArrow:hover{
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    svg{
+      stroke: $red;
+    }
+  }
+  .NextArrow{
+    left: -40px;
+    svg{
+      left: 10px;
+    }
+  }
+  .sliderRow-item_wrapper{
+    padding: 0 15px;
+      a{
+        color: $black;
+        font-size: 20px;
+        font-weight: 500;
+      }
+      a:hover{
+        border-bottom: solid 1px $gray4;
+        color: $gray4;
+      }
+      p{
+        font-size: 16px;
+        padding-top: 5px;
+        font-weight: 600;
+        color: $red;
+      }
+      span{
+        font-size: 16px;
+        color: $gray2;
+      }
+  
+    .sliderRow-item{
+      display: flex !important;
+      border: solid 1px $gray5;
+      overflow: hidden;
+      border-radius: 2px;
+      
+      .sliderRow-item_img{
+        height: 140px;
+        width: 350px;
+        position: relative;
+        overflow: hidden;
+        img{
+          object-fit: cover;
+          max-height: 100%;
+        }
+      }
+      .sliderRow-item_description{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 30px;
+        flex-grow: 1;
+        h6{
+          color: $gray2;
+        }
+  
+      }
+    }
+
+  }
+
+}
+// =========================================================
 
