--- a/style/style.scss
+++ b/style/style.scss
@@ -1234,6 +1234,22 @@ input::placeholder{
   }
 }
 // ================================= PopularOffers ======================
+
+// Loader -------------
+
+.sliderOffers__Loader{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 0;
+  padding-bottom: 60px;
+  .Loader-item{
+    width: 190px;
+    height: 190px;
+    background: $white;
+  }
+}
+// ---------------
 .popularOffers{
   background: $gray6;
 }
