--- a/style/style.scss
+++ b/style/style.scss
@@ -629,7 +629,7 @@ header{
 // ================================================== Find Tours ====================================
 .wiget_findTour {
   position: relative;
-  top: 287px;
+  top: 260px;
   z-index: 5;
   display: flex;
   height: 160px;
@@ -1528,6 +1528,17 @@ header{
     }
     button{
       margin-top: 30px;
+    }
+    .formAuth_loginFalse{
+      border: solid 1px $red;
+      margin-bottom: 15px;
+      padding: 15px 20px;
+      border-radius: 2px;
+      p{
+        font-size: 14px;
+        color: $red;
+      }
+
     }
   }
   .signin-forgotpassword{
